Version 3.7
- Updated code to re-serialize the EMRBOTS data
- Updated results