@@ -5,6 +5,19 @@
     <artifactId>uhpr_storage</artifactId>
     <version>3.6</version>
     <packaging>jar</packaging>
+    <build>
+        <plugins>
+    <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.5</version>
+    <configuration>
+        <forkMode>once</forkMode>
+        <argLine>-Xms$30g -Xmx$50g -XX:+UseConcMarkSweepGC -XX:-UseGCOverheadLimit</argLine>
+    </configuration>
+    </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
